# VertexProxy

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: hermes-config-snippet.yaml  systemd.service
tests/: test_config.py  test_ollama.py  test_openai_anthropic_bridge.py  test_routing.py
vertex_proxy/: __init__.py  __main__.py  config.py  main.py  openai_anthropic_bridge.py
